HMP-440: skip links visible on focus, misc a11y fixes

--- a/ucb_extras/cinefiles/app/assets/stylesheets/extras.scss
+++ b/ucb_extras/cinefiles/app/assets/stylesheets/extras.scss
@@ -45,7 +45,7 @@ h1, .h1 {
   margin-bottom: 30px;
 }
 
-article .document-heading {
+article .document-title {
   overflow: inherit;
 }
 
